# chatbot-telegram-ia

./: .env  LICENSE  README.md  bot_utils.py  config.py  dot-env-example  jogos.json  main.py  pyproject.toml  requirements.txt
utils/: utils.py
